--- a/index.html
+++ b/index.html
@@ -98,6 +98,17 @@
         </div>
     </section>
 
+    <section class="winners-carousel-section" id="winnersCarouselSection" style="display: none;">
+        <div class="container">
+            <div class="winners-carousel-container">
+                <div class="winners-carousel-track" id="winnersCarouselTrack">
+                    <!-- Loaded via JS -->
+                </div>
+            </div>
+            <div class="carousel-dots" id="carouselDots"></div>
+        </div>
+    </section>
+
     <section class="selection-section" id="selection">
         <div class="container">
             <div class="selection-card">
