--- a/index.html
+++ b/index.html
@@ -98,17 +98,6 @@
         </div>
     </section>
 
-    <section class="winners-carousel-section" id="winnersCarouselSection" style="display: none;">
-        <div class="container">
-            <div class="winners-carousel-container">
-                <div class="winners-carousel-track" id="winnersCarouselTrack">
-                    <!-- Loaded via JS -->
-                </div>
-            </div>
-            <div class="carousel-dots" id="carouselDots"></div>
-        </div>
-    </section>
-
     <section class="selection-section" id="selection">
         <div class="container">
             <div class="selection-card">
@@ -139,7 +128,8 @@
                 <div class="number-grid" id="numberGrid"></div>
 
                 <button class="submit-button" id="submitBtn" onclick="showUserInfoPopup()">
-                    🎫 DEPÓSITO R$10 E GERAR 🎫
+                    <span class="button-top">JÁ DEPOSITO NA PLATAFORMA?</span>
+                    <span class="button-bottom">GERE AGORA.</span>
                 </button>
             </div>
         </div>
@@ -147,6 +137,17 @@
 
     <section class="rules-section">
         <div class="rules-container">
+            <section class="winners-carousel-section" id="winnersCarouselSection" style="display: none;">
+                <div class="container">
+                    <div class="winners-carousel-container">
+                        <div class="winners-carousel-track" id="winnersCarouselTrack">
+                            <!-- Loaded via JS -->
+                        </div>
+                    </div>
+                    <div class="carousel-dots" id="carouselDots"></div>
+                </div>
+            </section>
+            
             <div class="info-banner">
                 <h2 class="rules-title">📋 REGRAS,<br>PARTICIPAÇÃO E PREMIAÇÃO</h2>
                 <div class="sabado-bonus">🍀 FÁCIL DE JOGAR, JUSTO E TRANSPARENTE</div>
